# llm-perf-calculator

./: AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
docs/Qwen_3.5/: Qwen3.5-35B-A3B.md
docs/app/design/: app-design-spec.md  architecture-design.md
docs/app/design/pages/: formula-notes.md  model-structure.md  performance-calculator.md
docs/deepseek_v4/: DeepSeek-V4-Flash.md  DeepSeek-V4-Pro.md
docs/gemma_4/: Gemma-4-12B-it.md  gemma-4-26B-A4B-it.md
docs/gemma_4/config/: gemma-4-12B-it-config.json  gemma-4-26B-A4B-it-config.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/app/layouts/: AppShell.tsx
src/app/routes/: router.tsx
src/app/styles/: global.css
src/components/layout/: SidebarNav.tsx
src/domain/model/: types.ts
src/domain/performance/: types.ts
src/domain/platform/: types.ts
src/domain/workload/: types.ts
src/engines/model-registry/: deepseekV4Models.ts  gemma4Models.ts  index.ts  qwen3_5Models.ts
src/features/performance-calculator/components/: CalculatorControls.tsx  ComparisonTable.tsx  FormulaTraceCard.tsx  IntermediateMetricsTable.tsx  MemoryBreakdownCard.tsx  MetricCards.tsx  TrendChart.tsx
src/pages/formula-notes/: FormulaNotesPage.tsx
src/pages/history/: HistoryPage.tsx
src/pages/model-structure/: ModelStructurePage.tsx
src/pages/performance-calculator/: PerformanceCalculatorPage.tsx
(+3 files in other folders)
