[package]
name = "llm-perf-calculator"
version = "0.1.0"
description = "LLM performance calculator desktop app"
authors = ["LLM Perf Calculator"]
edition = "2021"
license = "MIT"

[lib]
name = "llm_perf_calculator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "llm-perf-calculator"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
